# ai-engineering-bootcamp

./: .gitignore  Dockerfile  Dockerfile.classifier_mcp  Dockerfile.entities_mcp  Dockerfile.fastapi  Dockerfile.mlflow  README.md  create-bucket.sh  docker-compose.yml  init-db.sh  main.py  pyproject.toml
.github/workflows/: ci.yaml
documentation/project_design/: README-setup.md  README.md
evals/: eval_coordinator_agent.py
evals/datasets/: coordinator_agent.py
notebooks/: 01-llm-getting-started.ipynb  02-fraud-data-eda.ipynb  03-rag-preprocessing.ipynb  04-evaluation-dataset.ipynb  05-hybrid-search.ipynb  06-LangGraph-intro.ipynb  07-LangGraph-single-turn-assistant.ipynb  08-ml-model-training.ipynb  08-model-training.ipynb  09-LangGraph-multi-turn-assistant.ipynb  10-multiple-tools.ipynb  11-human-feedback.ipynb  12-mcp.ipynb  13-Router-Agent.ipynb  14-text-entities-tool.ipynb  15-Classifier-Agent.ipynb  15-Coordinator-Agent.ipynb  17-evaluator-coordinator.ipynb  18-litellm-router.ipynb  19-CICD.ipynb  evals.csv  fraud_clf_decision_tree.pkl
src/api/api/: endpoints.py  models.py
src/api/core/: config.py
src/api/ml/: classifier.py  preprocessor.py
src/api/processors/: submit_feedback.py
src/api/rag/: agent.py  agents.py  graph.py  retrieval.py  tools.py
src/api/rag/prompts/: classifier_agent.yaml  coordinator_agent.yaml  job_posting_qa_agent.yaml  rag_generation.yaml
src/api/rag/utils/: utils.py
src/chatbot-ui/: retrieval.py  streamlit_app.py
src/chatbot-ui/core/: config.py
src/chatbot_ui/: streamlit_app.py
src/classifier_mcp_server/: main.py  utils.py
src/classifier_mcp_server/core/: config.py
src/entities_mcp_server/: main.py  utils.py
src/entities_mcp_server/core/: config.py
src/items_mcp_server/: main.py  utils.py
src/items_mcp_server/core/: config.py
