[project]
name = "ai-engineering-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.21.1",
    "groq>=0.28.0",
    "httpx>=0.28.1",
    "instructor>=1.9.2",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-prebuilt>=0.5.2",
    "langsmith>=0.4.4",
    "matplotlib>=3.10.3",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "qdrant-client>=1.14.3",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "uvicorn>=0.35.0",
]
