[project]
name = "ai-engineering-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.14",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.0",
    "google-genai>=1.21.1",
    "groq>=0.28.0",
    "httpx>=0.28.1",
    "instructor>=1.9.2",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-prebuilt>=0.5.2",
    "langsmith>=0.4.4",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.12.3",
    "minio>=7.2.16",
    "mlflow>=3.1.4",
    "nltk>=3.9.1",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "psycopg2-binary",
    "psycopg[binary]",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "qdrant-client>=1.14.3",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "streamlit>=1.46.0",
    "uvicorn>=0.35.0",
]
